@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data>
         <menuitem name="Actions" id="menu_action" parent="menu_ui"/>
@@ -8,12 +9,14 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
               <![CDATA[
-                <form string="Action">
+                <form string="Action" col="6">
                     <label name="name"/>
                     <field name="name"/>
                     <label name="usage"/>
                     <field name="usage"/>
-                    <field name="keywords" colspan="4">
+                    <label name="active"/>
+                    <field name="active" xexpand="0" width="100"/>
+                    <field name="keywords" colspan="6">
                         <tree string="Keywords">
                             <field name="keyword"/>
                         </tree>
@@ -22,8 +25,8 @@
                             <field name="model"/>
                         </form>
                     </field>
-                    <separator name="groups" colspan="4"/>
-                    <field name="groups" colspan="4"/>
+                    <separator name="groups" colspan="6"/>
+                    <field name="groups" colspan="6"/>
                 </form>
                 ]]>
             </field>
@@ -35,7 +38,7 @@
               <![CDATA[
                 <tree string="Action">
                     <field name="name" select="1"/>
-                    <field name="type"/>
+                    <field name="type" select="1"/>
                 </tree>
                 ]]>
             </field>
@@ -71,12 +74,14 @@
                     <field name="name"/>
                     <label name="model"/>
                     <field name="model"/>
+                    <label name="active"/>
+                    <field name="active" xexpand="0" width="100"/>
                     <label name="report_name"/>
                     <field name="report_name"/>
                     <label name="report"/>
                     <field name="report"/>
                     <label name="report_content"/>
-                    <field name="report_content" colspan="3"/>
+                    <field name="report_content"/>
                     <label name="output_format"/>
                     <field name="output_format" widget="selection"/>
                     <label name="style"/>
@@ -156,9 +161,11 @@
               <![CDATA[
                 <form string="Open a Window" col="6">
                     <label name="name"/>
-                    <field name="name" colspan="3"/>
+                    <field name="name"/>
                     <label name="usage"/>
-                    <field name="usage" />
+                    <field name="usage"/>
+                    <label name="active"/>
+                    <field name="active" xexpand="0" width="100"/>
                     <label name="res_model"/>
                     <field name="res_model"/>
                     <label name="src_model"/>
@@ -247,6 +254,8 @@
                 <form string="Wizard">
                     <label name="name"/>
                     <field name="name"/>
+                    <label name="active"/>
+                    <field name="active" xexpand="0" width="100"/>
                     <label name="wiz_name"/>
                     <field name="wiz_name"/>
                     <label name="model"/>
@@ -313,6 +322,8 @@
                 <form string="URL">
                     <label name="name"/>
                     <field name="name"/>
+                    <label name="active"/>
+                    <field name="active" xexpand="0" width="100"/>
                     <label name="url"/>
                     <field name="url"/>
                 </form>
